# KODE-test

./: .env.example  .pre-commit-config.yaml  README.md  dockerfile  pyproject.toml
app/: app.sh
app/application/api/: main.py  schemas.py
app/application/api/auth/: handlers.py
app/application/api/note/: handlers.py  schemas.py
app/application/api/user/: handlers.py  schemas.py
app/domain/entities/: base.py  note.py  user.py
app/domain/exceptions/: base.py  user.py
app/domain/values/: base.py  note.py  user.py
app/infra/db/: main.py
app/infra/db/models/: base.py  note.py  user.py
app/infra/db/repository/: sa_repo.py
app/infra/db/repository/converters/: note.py  user.py
app/infra/db/repository/note/: base.py  sa_note_repo.py
app/infra/db/repository/user/: base.py  sa_user_repo.py
app/logic/: di.py
app/logic/exceptions/: auth.py  base.py  user.py  yandex.py
app/logic/services/auth/: auth.py  utils.py
app/logic/services/note/: note.py
app/logic/services/user/: user.py
app/logic/services/yandex/: validator.py
app/migrations/: env.py
app/migrations/versions/: 323a4b3c2f15_init_models.py  b0692ed75895_.py  e89456e9ee38_init_models.py
app/settings/: config.py
app/tests/: conftest.py  fixtures.py
app/tests/application/api/: conftest.py  test_note.py  test_user.py
app/tests/domain/entities/: test_note.py  test_user.py
app/tests/logic/: test_notes.py  test_users.py
docker_compose/: app.yaml
